--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
     text-align: center;
 }
 
+.inactive {
+    display: none;
+}
+
 .menu-container {
     max-width: 800px;
     margin: 0px auto;
@@ -28,6 +32,7 @@ body {
     border-radius: 8px;
     font-size: 1.5rem;
     text-align: center;
+    cursor: pointer;
 }
 
 .menu-item {
