--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,27 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+:root {
+  --primary-color: #0A174E;
+  --secondary-color: #F5D042;
+
+  --item-primary-color: #fff;
+  --item-secondary-color: #f5f5f5;
+}
+
 body {
   font-family: 'Poppins', sans-serif;
   margin: 0;
   padding: 0;
   text-align: center;
-  background-color: #fbbf24;
+  background-color: var(--primary-color);
+}
+
+.misc-details {
+  color: var(--secondary-color);
   background-image: url('../public/watermark.png');
-  background-repeat: repeat;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .menu-container {
@@ -23,6 +36,11 @@ body {
 
 .category-container {
   margin-top: 20px;
+}
+
+.category-title-wrapper {
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
 }
 
 .category-title-wrapper {
@@ -50,7 +68,7 @@ body {
 .item-wrapper {
   margin-bottom: 8px;
   padding: 10px 20px;
-  background-color: #fff;
+  background-color: var(--item-primary-color);
   border-radius: 8px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   transition: background-color 0.3s;
@@ -60,7 +78,7 @@ body {
 }
 
 .item-wrapper.alternate {
-  background-color: #f5f5f5;
+  background-color: var(--item-secondary-color);
 }
 
 .item-wrapper:hover {
