--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ body {
   background-image: url('../public/watermark.png');
   background-position: center;
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .menu-container {
