--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,8 @@
 @import "tailwindcss/utilities";
 
 :root {
-  --primary-color: #0A174E;
-  --secondary-color: #F5D042;
+  --primary-color: #eab308;
+  --secondary-color: #e11d48;
 
   --item-primary-color: #fff;
   --item-secondary-color: #f5f5f5;
@@ -20,12 +20,10 @@ body {
   background-color: var(--primary-color);
 }
 
-.misc-details {
-  color: var(--secondary-color);
-  background-image: url('../public/watermark.png');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+.logo {
+  width: 200px;
+  margin: 0px auto;
+  display: block;
 }
 
 .menu-container {
@@ -41,7 +39,7 @@ body {
 
 .category-title-wrapper {
   background-color: var(--secondary-color);
-  color: var(--primary-color);
+  color: #FFF;
 }
 
 .category-title-wrapper {
